--- a/angular/src/app/pages/trendradar/trendradar.component.sass
+++ b/angular/src/app/pages/trendradar/trendradar.component.sass
@@ -42,6 +42,9 @@
 .cv-circle
   fill: none
   stroke-width: 1
+circle:hover
+  cursor: pointer
+
 .cv-circle-trend
   :hover
     background: red
@@ -77,3 +80,6 @@ circle
   text-decoration: underline
   :hover
     cursor: pointer
+
+.active
+  fill: red
