--- a/angular/src/app/pages/listtrends/listtrends.component.sass
+++ b/angular/src/app/pages/listtrends/listtrends.component.sass
@@ -1,19 +1,32 @@
+.cv-title
+  margin-left: 30px
 .trends
   margin-top: 20px
   .trend-element
-    height: 700px
+    height: 500px
+    margin: 20px 0
+    .trend-element-wrappe
+      padding: 15px
+      box-sizing: border-box
+      border: 1px solid #dadada
+      box-shadow: 1px 1px 3px #8c8c8c
+      border-radius: 10px
+
   img:hover
     transform: scale(1.5,1.5)
     transition-duration: 6s
   .createdBy
     color: #673ab7
 .title
+  height: 40px
   a
     cursor: pointer
     text-decoration: none
     font-weight: bold
 .img-galaxy, video
   max-width: 100%
+  height: 300px
+  width: 100%
 .btn-search
   line-height: 50px
 .clearfix
