--- a/angular/src/app/pages/roadmap/roadmap.component.sass
+++ b/angular/src/app/pages/roadmap/roadmap.component.sass
@@ -1,13 +1,8 @@
 .roadmap
   padding: 10px
   color: white
-  overflow: scroll
   background-image: radial-gradient(rgba(241,241,241,.6),rgba(241,241,241,.54),rgba(255,255,255,.4),rgba(241,241,241,.3),rgba(255,255,255,.1),rgba(255,255,255,.05))
   -webkit-animation-iteration-count: infinite
-  .content-roadmap
-    overflow: scroll
-  .rm-high, .rm-mittel, .rm-low, .timeline
-    overflow: auto
 input.ng-touched.ng-valid
   border: 0px solid green
 input.ng-touched.ng-invalid
@@ -17,5 +12,81 @@ input.ng-touched.ng-invalid
   .vt-year-col
     border: 1px solid #89efa8
     padding: 5px 7px
-  .right
-    overflow-x: scroll
+  .vt-year-month
+    padding: 0
+  .btn-filter
+    height: 50px
+    margin-top: -15px
+
+
+.vt-evaultion-right
+  position: relative
+  display: block
+  p
+    position: relative
+    z-index: 99
+    overflow: hidden
+.cv-tooltip
+  background-color: #ffd953
+  font-size: large
+  color: black
+  width: 500px
+  text-align: left
+  display: block
+  border: 5px solid
+  .cv-title
+    color: #4345c0
+    
+.ng-tooltip 
+  position: absolute
+  max-width: 150px
+  font-size: 14px
+  text-align: center
+  color: #f8f8f2
+  padding: 3px 8px
+  background: #282a36
+  border-radius: 4px
+  z-index: 1000
+  opacity: 0
+
+  .ng-tooltip:after 
+    content: ""
+    position: absolute
+    border-style: solid
+
+  .ng-tooltip-top:after 
+    top: 100%
+    left: 50%
+    margin-left: -5px
+    border-width: 5px
+    border-color: black transparent transparent transparent
+
+  .ng-tooltip-bottom:after 
+    bottom: 100%
+    left: 50%
+    margin-left: -5px
+    border-width: 5px
+    border-color: transparent transparent black transparent
+
+  .ng-tooltip-left:after 
+    top: 50%
+    left: 100%
+    margin-top: -5px
+    border-width: 5px
+    border-color: transparent transparent transparent black
+
+  .ng-tooltip-right:after 
+    top: 50%
+    right: 100%
+    margin-top: -5px
+    border-width: 5px
+    border-color: transparent black transparent transparent
+
+  .ng-tooltip-show 
+    opacity: 1
+
+.date-end
+  color: #091b1f
+.cv-print
+  margin-left: 15px
+  color: white
