--- a/angular/src/app/pages/trend-detail/trend-detail.component.sass
+++ b/angular/src/app/pages/trend-detail/trend-detail.component.sass
@@ -1,5 +1,6 @@
 .trends, .trend-vote
   font-size: large
+  line-height: 30px
   .source-type
     padding-left: 20px
     span
@@ -9,29 +10,43 @@
     margin-bottom: 10px
     border: 1px dotted #89efa8
     background: antiquewhite
+    border-radius: 10px
   .roadmap
     margin-bottom: 15px
-.trend-vote
-  margin-bottom: 50px
-.title
-  a
-    text-decoration: none
-    color: #0d6efd
-.createdBy
-  color: #673ab7
-.img, .video
-  margin-bottom: 10px
-.img:hover
-  transform: scale(1.5,1.5)
-  transition-duration: 6s
+  .title
+    a
+      text-decoration: none
+      color: #0d6efd
+      font-size: 50px
+  .cate-title
+    border-radius: 10px
+    padding: 5px
+    margin: 5px
 
+  .fas
+    margin-right: 5px
+  .createdBy
+    color: #673ab7
+  .img, .video
+    margin-bottom: 10px
+
+.trend-vote
+    margin-bottom: 100px
+
+
+.img-galaxy-detail
+  width: 100%
+  height: 265px
 .img-galaxy-detail, .video-galaxy-detail
   max-width: 100%
   padding: 5px
+.img-galaxy-detail:hover
+    transform: scale(1.5,1.5)
+    transition-duration: 6s
+
 .trend-comment-detail
   height: 450px
   overflow: scroll
-  border: 1px solid gray
 .vt-commented
   margin-bottom: 10px
   .vt-commented-date
@@ -49,9 +64,16 @@
   background-color: #673ab7
   color: white
   padding: 5px
-  margin-right: 10px
+  border-radius: 30px
+  text-align: center
 .end
   border: 1px solid gray
-  color: white
+  color: #3e3737
   background-color: #ffd953
   padding: 5px
+  border-radius: 30px
+  text-align: center
+.share-download
+  margin-top: 20px
+  .btn-download
+    width: 10%
