--- a/angular/src/app/pages/trendradar/trendradar.component.html
+++ b/angular/src/app/pages/trendradar/trendradar.component.html
@@ -1,10 +1,10 @@
-
-<div class="container">
+<div class="container cv-container">
+  <button (click)="printService.mediaprint()" class="btn btn-info cv-print">Print</button>
   <div #tooltip class="tooltip"></div>
 
   <svg class="cv-radar" width="1450" height="1000" style="background: white">
 
-    <g transform="translate(725,500)">
+    <g transform="translate(625,500)">
 
       <!--      2 Lines and the circles      -->
       <g>
@@ -29,99 +29,76 @@
         <text y="-248" text-anchor="middle" class="text-cluster" fill="orange">
           ASSESS
         </text>
-        <circle cx="0" cy="0" r="400" class="cv-circle" stroke="red" ></circle>
-        <text y="-338" text-anchor="middle" class="text-cluster" fill="red">
+        <circle cx="0" cy="0" r="400" class="cv-circle" stroke="#f436ca" ></circle>
+        <text y="-338" text-anchor="middle" class="text-cluster" fill="#f436ca">
           HOLD
         </text>
       </g>
 
       <ng-container *ngFor="let item of adoptTrends; index as i">
         <g class="blip" [attr.transform]="caculateTransform(item.average_effect, item.average_pro, 1, item.indexed)">
-          <!--      down-->
-          <!--      <path d="M -11,-5 11,-5 0,13 z" style="fill: rgb(239, 175, 169);"></path>-->
-
-          <!--      up-->
-          <!--      <path d="M -11,5 11,5 0,-13 z" style="fill: rgb(239, 175, 169);"></path>-->
 
           <!--      cricle symbol-->
-          <circle r="9" fill="green" class="cv-circle-trend" class="cv-circle-adopt-{{i+1}}"
-                  (mouseenter)="mouseEnter($event, item.trendId.title)"
+          <circle r="12" fill="green" class="cv-circle-trend cv-circle-adopt-{{i+1}} highlight-{{item.trendId.id}}" id="highlight-{{item.trendId.id}}"
                   (click)="clickCircle(item.trendId.id)"
-                  (mouseleave)="mouseLeave($event)"></circle>
+
+                  (mouseenter)="mouseEnter($event, item.trendId.title) ; mouseHighlightEnter($event)"
+                  (mouseleave)="mouseLeave($event) ; mouseHighlightLeave($event)"
+          >
+
+          </circle>
           <text y="3" text-anchor="middle" class="cv-trend-text">
-            {{ i + 1 }}
+            {{ item.trendId.id }}
           </text>
         </g>
       </ng-container>
 
       <ng-container *ngFor="let item of trialTrends; index as i">
         <g class="blip" [attr.transform]="caculateTransform(item.average_effect, item.average_pro, 2, item.indexed)">
-          <!--      down-->
-          <!--      <path d="M -11,-5 11,-5 0,13 z" style="fill: rgb(239, 175, 169);"></path>-->
-
-          <!--      up-->
-          <!--      <path d="M -11,5 11,5 0,-13 z" style="fill: rgb(239, 175, 169);"></path>-->
 
           <!--      cricle symbol-->
-          <circle r="9" fill="blue"
-                  (mouseenter)="mouseEnter($event, item.trendId.title)"
-                  (mouseleave)="mouseLeave($event)">
+          <circle r="12" fill="blue" class="highlight-{{item.trendId.id}}" id="highlight-{{item.trendId.id}}"
+                  (click)="clickCircle(item.trendId.id)"
+                  (mouseenter)="mouseEnter($event, item.trendId.title) ; mouseHighlightEnter($event)"
+                  (mouseleave)="mouseLeave($event) ; mouseHighlightLeave($event)"
+          >
 
           </circle>
 
           <text y="3" text-anchor="middle" class="cv-trend-text">
-            {{ i + 1}}
+            {{ item.trendId.id }}
           </text>
         </g>
       </ng-container>
 
       <ng-container *ngFor="let item of assesTrends; index as i">
         <g class="blip" [attr.transform]="caculateTransform(item.average_effect, item.average_pro, 3, item.indexed)">
-          <!--      down-->
-          <!--      <path d="M -11,-5 11,-5 0,13 z" style="fill: rgb(239, 175, 169);"></path>-->
-
-          <!--      up-->
-          <!--      <path d="M -11,5 11,5 0,-13 z" style="fill: rgb(239, 175, 169);"></path>-->
 
           <!--      cricle symbol-->
-          <circle r="9" fill="orange" (mouseenter)="mouseEnter($event, item.trendId.title)"
-                  (mouseleave)="mouseLeave($event)" ></circle>
+          <circle r="12" fill="orange" class="highlight-{{item.trendId.id}}" id="highlight-{{item.trendId.id}}"
+                  (click)="clickCircle(item.trendId.id)"
+                  (mouseenter)="mouseEnter($event, item.trendId.title) ; mouseHighlightEnter($event)"
+                  (mouseleave)="mouseLeave($event) ; mouseHighlightLeave($event)"
+          ></circle>
           <text y="3" text-anchor="middle" class="cv-trend-text">
-            {{ i + 1 }}
+            {{ item.trendId.id }}
           </text>
         </g>
       </ng-container>
 
       <ng-container *ngFor="let item of holdTrends; index as i">
         <g class="blip" [attr.transform]="caculateTransform(item.average_effect, item.average_pro, 4, item.indexed)">
-          <!--      down-->
-          <!--      <path d="M -11,-5 11,-5 0,13 z" style="fill: rgb(239, 175, 169);"></path>-->
-
-          <!--      up-->
-          <!--      <path d="M -11,5 11,5 0,-13 z" style="fill: rgb(239, 175, 169);"></path>-->
-
           <!--      cricle symbol-->
-          <circle r="9" fill="red" (mouseenter)="mouseEnter($event, item.trendId.title)"
-                  (mouseleave)="mouseLeave($event)"></circle>
+          <circle r="12" fill="#f436ca" class="highlight-{{item.trendId.id}}" id="highlight-{{item.trendId.id}}"
+                  (click)="clickCircle(item.trendId.id)"
+                  (mouseenter)="mouseEnter($event, item.trendId.title) ; mouseHighlightEnter($event)"
+                  (mouseleave)="mouseLeave($event) ; mouseHighlightLeave($event)"
+          ></circle>
           <text y="3" text-anchor="middle" class="cv-trend-text">
-            {{ i + 1}}
+            {{ item.trendId.id }}
           </text>
         </g>
       </ng-container>
-
-      <!--<g class="blip" transform="translate(85, 104)">
-        &lt;!&ndash;      down&ndash;&gt;
-        &lt;!&ndash;      <path d="M -11,-5 11,-5 0,13 z" style="fill: rgb(239, 175, 169);"></path>&ndash;&gt;
-
-        &lt;!&ndash;      up&ndash;&gt;
-        &lt;!&ndash;      <path d="M -11,5 11,5 0,-13 z" style="fill: rgb(239, 175, 169);"></path>&ndash;&gt;
-
-        &lt;!&ndash;      cricle symbol&ndash;&gt;
-        <circle r="9" fill="#93c47d"></circle>
-        <text y="3" text-anchor="middle" class="cv-trend-text">
-          bien
-        </text>
-      </g>-->
       <!--      TREND      -->
     </g>
 
@@ -129,8 +106,11 @@
     <g transform="translate(0,30)">
       <text class="title">Adopt Trend:</text>
       <ng-container *ngFor="let item of adoptTrends;index as i">
-        <text [attr.transform]="caculateTextAdopt(i)" class="cv-trend-detail">
-          <a  (click)="clickCircle(item.trendId.id)">{{i +1}}. {{item.trendId.title}}</a>
+        <text [attr.transform]="caculateTextAdopt(i)" class="cv-trend-detail highlight-{{item.trendId.id}}"
+              (mouseenter)="mouseHighlightEnter($event)" (mouseleave)="mouseHighlightLeave($event)"
+              id="highlight-{{item.trendId.id}}"
+        >
+          <a  (click)="clickCircle(item.trendId.id)">{{item.trendId.id}}. {{item.trendId.title}}</a>
         </text>
       </ng-container>
     </g>
@@ -138,8 +118,11 @@
     <g transform="translate(1200,30)">
       <text class="title">Trial Trend:</text>
       <ng-container *ngFor="let item of trialTrends;index as i">
-        <text [attr.transform]="caculateTextTrial(i)" class="cv-trend-detail">
-          <a  (click)="clickCircle(item.trendId.id)">{{i +1}}. {{item.trendId.title}}</a>
+        <text [attr.transform]="caculateTextTrial(i)" class="cv-trend-detail highlight-{{item.trendId.id}}"
+              (mouseenter)="mouseHighlightEnter($event)" (mouseleave)="mouseHighlightLeave($event)"
+              id="highlight-{{item.trendId.id}}"
+        >
+          <a  (click)="clickCircle(item.trendId.id)">{{item.trendId.id}}. {{item.trendId.title}}</a>
         </text>
       </ng-container>
     </g>
@@ -147,8 +130,11 @@
     <g transform="translate(1200,800)">
       <text class="title">Asses Trend:</text>
       <ng-container *ngFor="let item of assesTrends;index as i">
-        <text [attr.transform]="caculateTextTrial(i)" class="cv-trend-detail">
-          <a  (click)="clickCircle(item.trendId.id)">{{i +1}}. {{item.trendId.title}}</a>
+        <text [attr.transform]="caculateTextTrial(i)" class="cv-trend-detail highlight-{{item.trendId.id}}"
+              (mouseenter)="mouseHighlightEnter($event)" (mouseleave)="mouseHighlightLeave($event)"
+              id="highlight-{{item.trendId.id}}"
+        >
+          <a  (click)="clickCircle(item.trendId.id)">{{item.trendId.id}}. {{item.trendId.title}}</a>
         </text>
       </ng-container>
     </g>
@@ -156,8 +142,11 @@
     <g transform="translate(0,800)">
       <text class="title">Hold Trend:</text>
       <ng-container *ngFor="let item of holdTrends;index as i">
-        <text [attr.transform]="caculateTextAdopt(i)" class="cv-trend-detail">
-          <a  (click)="clickCircle(item.trendId.id)">{{i +1}}. {{item.trendId.title}}</a>
+        <text [attr.transform]="caculateTextAdopt(i)" class="cv-trend-detail highlight-{{item.trendId.id}}"
+              (mouseenter)="mouseHighlightEnter($event)" (mouseleave)="mouseHighlightLeave($event)"
+              id="highlight-{{item.trendId.id}}"
+        >
+          <a  (click)="clickCircle(item.trendId.id)">{{item.trendId.id}}. {{item.trendId.title}}</a>
         </text>
       </ng-container>
     </g>
@@ -201,4 +190,23 @@
       HOLD technologies should not be used for new projects, but usually can be continued for existing projects.
     </p>
   </details>
+</div>
+
+<div class="container conclusion">
+  <p>Here are a conclusion about your trends</p>
+  <p>
+    With these trends in the area of ADOPT you can realize, and plan for your company the future
+  </p>
+
+  <p>
+    With these trends in the area of TRIAL you can try it but pls get attention of its risiky.
+  </p>
+
+  <p>
+    With these trends in the area of ASSES Trend that are promising and have clear potential value-add for us
+  </p>
+
+  <p>
+    In the area of HOLD please don't invest your money into this technology because it is so risky and your money could go away.
+  </p>
 </div>
